Improved the star extractor

--- a/magic/config/starextractor.cfg
+++ b/magic/config/starextractor.cfg
@@ -164,7 +164,7 @@ fitting:
 # Removal
 removal:
 {
-  method: "interpolation"  # options: "interpolation" or "model"
+  method: ["interpolation", "interpolation", None]    # stars with model, stars without model but with source, stars with neither
   interpolation_method: "local_mean"
   sigma_clip: True
   no_sigma_clip_on_galaxy: True
