Some improvements in galaxyextractor, starextractor and skyextractor

--- a/magic/config/galaxyextractor.cfg
+++ b/magic/config/galaxyextractor.cfg
@@ -182,4 +182,7 @@ writing:
   
   # Writing the resulting frame (with galaxies removed)
   result_path: None
+  
+  # Value to use for masked pixels in the resulting FITS files
+  mask_value: "nan"  # or e.g.: 0.0  (value is converted with float(mask_value) anyway)
 }
