--- a/magic/config/starextractor.cfg
+++ b/magic/config/starextractor.cfg
@@ -144,8 +144,9 @@ fitting:
   background_est_method: "polynomial"
   sigma_clip_background: True
 
-  # Fit factor
-  #fit_factor: 1.0 # not used anymore
+  # sigma-clipping
+  sigma_clip_fwhms: False
+  fwhm_sigma_level: 3.0
 
   # Upsample factor
   upsample_factor: 1.0
@@ -301,4 +302,7 @@ writing:
   
   # Writing the resulting frame (with stars removed)
   result_path: None
+  
+  # Value to use for masked pixels in the resulting FITS files
+  mask_value: "nan"  # or e.g.: 0.0  (value is converted with float(mask_value) anyway)
 }
