Added extra option in star extractor / saturation removal

--- a/magic/config/starextractor.cfg
+++ b/magic/config/starextractor.cfg
@@ -242,6 +242,9 @@ saturation:
   user_expansion: False
   user_expansion_factor: None
   
+  # Remove if not fitted
+  remove_if_not_fitted: True
+  
   # Remove if undetected
   remove_if_undetected: True
   
