Trying new things in star extractor

--- a/magic/config/starextractor.cfg
+++ b/magic/config/starextractor.cfg
@@ -70,7 +70,7 @@ write_result: False
 fetching:
 {
   # Other possible catalogs: "UCAC4", "NOMAD", "PPMXL", "II/246" (=2MASS point sources) (or combinations: not supported (yet)! )
-  catalog: "II/246"
+  catalogs: "II/246"
   
   # The minimum distance the star has to be seperated from the galaxy center to be positively identified as a star
   min_distance_from_galaxy:
