Fixing import statements #2

--- a/magic/config/starextractor.cfg
+++ b/magic/config/starextractor.cfg
@@ -185,7 +185,7 @@ removal:
 # Saturated stars
 saturation:
 {
-  method: "brightest" # other: "size", "all"
+  method: "all" # other: "size", "brightest"
   criterion: "flux"  # or "central_brightness"
   brightest_method: "percentage"  # or: "sigma_clip"
   limit: 0.08  # for "percentage": a percentage, for "sigma_clip": a sigma-level
