StarExtractor: Added code to remove apertures created from other segments

--- a/magic/config/starextractor.cfg
+++ b/magic/config/starextractor.cfg
@@ -42,6 +42,9 @@ aperture_removal:
 {
   # Expansion factor
   expansion_factor: 1.0
+  
+  # Background outer factor
+  background_outer_factor: 1.2
 }
 
 # Find and remove other sources
