StarExtractor: check the ellipticity and center of the apertures

--- a/magic/config/starextractor.cfg
+++ b/magic/config/starextractor.cfg
@@ -45,6 +45,14 @@ aperture_removal:
   
   # Background outer factor
   background_outer_factor: 1.2
+  
+  # Sigma-clipping
+  no_sigma_clip_on_galaxy: True
+  sigma_clip: True
+  
+  # Interpolation
+  polynomial_on_galaxy: True
+  interpolation_method: "local_mean"
 }
 
 # Find and remove other sources
@@ -280,6 +288,7 @@ fwhm:
 apertures:
 {
   sigma_level: 4.0 # approximate isophotal extent
+  max_ellipticity: 0.2
 }
 
 # Manually selected stars
