Fixed import statements #4

--- a/magic/config/galaxyextractor.cfg
+++ b/magic/config/galaxyextractor.cfg
@@ -157,6 +157,9 @@ region:
 apertures:
 {
   sigma_level: 4.0 # approximate isophotal extent
+  
+  # Maximal offset between the aperture center and galaxy position (in number of pixels) (None=no limit)
+  max_offset: None
 }
 
 # Manually selected galaxies
