--- a/magic/config/starextractor.cfg
+++ b/magic/config/starextractor.cfg
@@ -288,7 +288,10 @@ fwhm:
 apertures:
 {
   sigma_level: 4.0 # approximate isophotal extent
-  max_ellipticity: 0.2
+  max_ellipticity: 0.1
+  
+  # Maximal offset between the aperture center and star position (in number of pixels) (None=no limit)
+  max_offset: 10.0
 }
 
 # Manually selected stars
