Working on ScalingTest

--- a/core/config/skirtremote.cfg
+++ b/core/config/skirtremote.cfg
@@ -14,14 +14,10 @@ logging:
 # The host identifier
 host_id: None
 
-# The host name
-host: None
+# The cluster name
+cluster_name: None
 
-# The user name
-user: None
-
-# Password
-password: None
-
-# Remote output path
-output_path: None
+# Options for the remote host
+host:
+{
+}
