--- a/core/config/skirtremotelauncher.cfg
+++ b/core/config/skirtremotelauncher.cfg
@@ -14,8 +14,11 @@ logging:
 # The remote host to use
 remote: None
 
-# SKIRT parameters
-parameters:
+# The name of the cluster to be used (if using a scheduling system)
+cluster: None
+
+# SKIRT arguments
+arguments:
 {
 }
 
