Improvements in ScalingTest

--- a/core/config/scalingtest.cfg
+++ b/core/config/scalingtest.cfg
@@ -31,7 +31,7 @@ max_nodes: None
 manual: False
 
 # Keep the output of the simulations
-keep_output: False
+keep: False
 
 # Options for extracting other information from the simulation's log files
 extraction:
