--- a/core/config/skirtremotelauncher.cfg
+++ b/core/config/skirtremotelauncher.cfg
@@ -17,6 +17,12 @@ remote: None
 # The name of the cluster to be used (if using a scheduling system)
 cluster: None
 
+# Keep remote input and output
+keep: False
+
+# The types of output that should be retreived for the simulation (None means everything should be downloaded)
+retreive_types: None
+
 # SKIRT arguments
 arguments:
 {
