--- a/core/config/remotesynchronizer.cfg
+++ b/core/config/remotesynchronizer.cfg
@@ -10,3 +10,9 @@ logging:
   # Sets the path for an optional log file
   path: None
 }
+
+# The remote host for which to show/retreive the simulations (None means all)
+remote: None
+
+# A dictionary that contains the ID's of simulations that have to be deleted from the synchronization in the future
+delete: None
