Added 'pts clear' command to clear all simulations with a given status

--- a/core/config/remotesynchronizer.cfg
+++ b/core/config/remotesynchronizer.cfg
@@ -16,3 +16,6 @@ remote: None
 
 # A dictionary that contains the ID's of simulations that have to be deleted from the synchronization in the future
 delete: None
+
+# A list containing the name of each status for which corresponding simulations should be cleared
+statuses: None
