Introduced 'pts relaunch'

--- a/core/config/remotesynchronizer.cfg
+++ b/core/config/remotesynchronizer.cfg
@@ -19,3 +19,6 @@ ids: None
 
 # A list containing the name of each status for which corresponding simulations should be cleared
 statuses: None
+
+# A list of simulation ID's to relaunch
+relaunch: None
