Improvements in AstroMagic

--- a/magic/config/extractor.cfg
+++ b/magic/config/extractor.cfg
@@ -5,17 +5,43 @@ logging:
   level: 'INFO'
   
   # Cascade the logging level down to the lower-level objects
-  cascade: True
+  cascade: False
   
   # Sets the path for an optional log file
   path: None
 } 
 
+# Options for galaxy extraction
+galaxies:
+{
+}
+
+# Options for star extraction
+stars:
+{
+}
+
 # The path to the output directory
 output_path: None
 
-# Save regions
-save_regions: False
+# Write out the result
+write_result: True
 
-# Save masks
-save_masks: False
+# Write out the total mask
+write_mask: True
+
+# Write out region files from the galaxy and star extraction
+write_regions: False
+
+# Write out masked frames from the galaxy and star extraction
+write_masked_frames: False
+
+# Options for writing
+writing:
+{
+    # Writing the resulting frame (with galaxies and stars removed)
+    result_path: None
+    
+    # Writing the total mask (galaxy mask + star mask)
+    mask_path: None
+}
