--- a/magic/config/starextractor.cfg
+++ b/magic/config/starextractor.cfg
@@ -5,7 +5,7 @@ logging:
   level: 'INFO'
   
   # Cascade the logging level down to the lower-level objects
-  cascade: True
+  cascade: False
   
   # Sets the path for an optional log file
   path: None
