Fixed AstroMagic when image contains distortion parameters

--- a/magic/config/starextractor.cfg
+++ b/magic/config/starextractor.cfg
@@ -131,6 +131,9 @@ detection:
   # Always subtract background
   always_subtract_background: False
   
+  # Perform convolution, define the fwhm (in pixels) (for detection_method: "peaks")
+  convolution_fwhm: None
+  
   # Debug
   debug:
   {
