Improvements in AstroMagic

--- a/magic/config/galaxyextractor.cfg
+++ b/magic/config/galaxyextractor.cfg
@@ -50,8 +50,14 @@ write_region: False
 # Write masked frame
 write_masked_frame: False
 
+# Write cutouts
+write_cutouts: False
+
 # Write result
 write_result: False
+
+# Pixel to world (and vice versa) coordinate transformation method for AstroPy
+transformation_method: "wcs"  # "wcs" or "all"
 
 # Detection
 detection:
@@ -182,6 +188,9 @@ writing:
   
   # Writing masked galaxies frame
   masked_frame_path: None
+  
+  # Cutouts directory path
+  cutouts_path: None
   
   # Writing the resulting frame (with galaxies removed)
   result_path: None
