--- a/magic/config/starextractor.cfg
+++ b/magic/config/starextractor.cfg
@@ -74,8 +74,14 @@ write_masked_frame: False
 # Write the segmentation map of other sources
 write_other_segments: False
 
+# Write star cutouts
+write_cutouts: False
+
 # Write result
 write_result: False
+
+# Pixel to world (and vice versa) coordinate transformation method for AstroPy
+transformation_method: "wcs"  # "wcs" or "all"
 
 # Fetching
 fetching:
@@ -320,6 +326,9 @@ writing:
   
   # Writing the segmentation map of other sources
   other_segments_path: None
+  
+  # Cutouts directory path
+  cutouts_path: None
   
   # Writing the resulting frame (with stars removed)
   result_path: None
