Fixed misspelling of 'retrieved' everywhere in code and comments

--- a/core/config/remotesynchronizer.cfg
+++ b/core/config/remotesynchronizer.cfg
@@ -11,7 +11,7 @@ logging:
   path: None
 }
 
-# The remote host for which to show/retreive the simulations (None means all)
+# The remote host for which to show/retrieve the simulations (None means all)
 remote: None
 
 # A dictionary that contains the ID's of simulations that have to be deleted from the synchronization in the future
