--- a/core/config/skirtremotelauncher.cfg
+++ b/core/config/skirtremotelauncher.cfg
@@ -20,8 +20,8 @@ cluster: None
 # Keep remote input and output
 keep: False
 
-# The types of output that should be retreived for the simulation (None means everything should be downloaded)
-retreive_types: None
+# The types of output that should be retrieved for the simulation (None means everything should be downloaded)
+retrieve_types: None
 
 # SKIRT arguments
 arguments:
