AstroMagic: improved the use of SExtractor to find sources

--- a/magic/config/trainedextractor.cfg
+++ b/magic/config/trainedextractor.cfg
@@ -11,20 +11,80 @@ logging:
   path: None
 } 
 
-# Zero point in [mag arcsec^-2]
-zero_point: 20.0
+# Options ...
+remove: True
+find_apertures: False
+remove_apertures: False
+classify: False
 
-# Gain in [e-/ADU]
-gain: 4.0
+# Writing options
+write_masked_frame: False
+write_segments: False
 
-# Pixelscale in [arcsec/pix]
-pixelscale: 1.0
+# Source detection
+detection:
+{
+  # Detection method ("peaks", "segmentation" or "sextractor")
+  method: "segmentation"
+  
+  # Options for peak detection
+  peaks:
+  {
+  }
+  
+  # Options for segmentation
+  segmentation:
+  {
+  }
+  
+  # Options for SExtractor
+  sextractor:
+  {
+    # Zero point in [mag arcsec^-2]
+    zero_point: 20.0
 
-# FWHM of the PSF
-fwhm: 1.0
+    # Gain in [e-/ADU]
+    gain: 4.0
 
-# sextractor input file
-input_file: "default.sex"
+    # Pixelscale in [arcsec/pix]
+    pixelscale: 1.0
 
-# Remove the temporary directory
-remove_temp: False
+    # FWHM of the PSF
+    fwhm: 1.0
+
+    # sextractor input file
+    input_file: "default.sex"
+
+    # Remove the temporary directory
+    remove_temp: False
+  }
+}
+
+# Source removal
+removal:
+{
+  # Interpolation method ("local_mean", "polynomial", "median", "mean")
+  interpolation_method: "local_mean"
+}
+
+apertures:
+{
+}
+
+aperture_removal:
+{
+}
+
+classification:
+{
+}
+
+# Writing
+writing:
+{
+  # Writing masked sources frame
+  masked_frame_path: None
+ 
+  # Value to use for masked pixels in the resulting FITS files
+  mask_value: "nan"  # or e.g.: 0.0  (value is converted with float(mask_value) anyway)
+}
