AstroMagic: improved writing out FITS files for each individual star/galaxy

--- a/magic/config/starextractor.cfg
+++ b/magic/config/starextractor.cfg
@@ -320,6 +320,9 @@ writing:
   # Cutouts directory path
   cutouts_path: None
   
+  cutouts_undected_sigma_level: 5.0
+  cutouts_undetected_outer_factor: 1.5 
+  
   # Writing the resulting frame (with stars removed)
   result_path: None
   
