The list of galaxies and stars can now be compiled into a catalog table and imported again

--- a/magic/config/extractor.cfg
+++ b/magic/config/extractor.cfg
@@ -11,6 +11,12 @@ logging:
   path: None
 } 
 
+# The path to the input directory
+input_path: None
+
+# The path to the output directory
+output_path: None
+
 # Options for galaxy extraction
 galaxies:
 {
@@ -20,9 +26,6 @@ galaxies:
 stars:
 {
 }
-
-# The path to the output directory
-output_path: None
 
 # Write out the result
 write_result: True
