--- a/magic/config/galaxyextractor.cfg
+++ b/magic/config/galaxyextractor.cfg
@@ -11,6 +11,12 @@ logging:
   path: None
 } 
 
+# The path to the input directory
+input_path: None
+
+# The path to the output directory
+output_path: None
+
 # Track record
 track_record: False
 plot_track_record_if_exception: True
@@ -41,8 +47,8 @@ aperture_removal:
 # Remove manual sources
 remove_manual: True
 
-# Write table
-write_table: False
+# Write catalog
+write_catalog: False
 
 # Write region
 write_region: False
@@ -58,6 +64,14 @@ write_result: False
 
 # Pixel to world (and vice versa) coordinate transformation method for AstroPy
 transformation_method: "wcs"  # "wcs" or "all"
+
+# Fetching options
+fetching:
+{
+  # Use a catalog file
+  use_catalog_file: False
+  catalog_path: None
+}
 
 # Detection
 detection:
@@ -179,8 +193,8 @@ manual:
 # Writing
 writing:
 {
-  # Writing galaxy table
-  table_path: None
+  # Writing galaxy catalog
+  catalog_path: None
   
   # Writing galaxy region
   region_path: None
