--- a/magic/config/starextractor.cfg
+++ b/magic/config/starextractor.cfg
@@ -11,6 +11,12 @@ logging:
   path: None
 } 
 
+# The path to the input directory
+input_path: None
+
+# The path to the output directory
+output_path: None
+
 # Track record
 track_record: False
 plot_track_record_if_exception: True
@@ -61,6 +67,9 @@ remove_manual: True
 # Write table
 write_table: False
 
+# Write catalog
+write_catalog: False
+
 # Write region
 write_region: False
 
@@ -79,6 +88,10 @@ transformation_method: "wcs"  # "wcs" or "all"
 # Fetching
 fetching:
 {
+  # Use a catalog file
+  use_catalog_file: False
+  catalog_path: None
+
   # Other possible catalogs: "UCAC4", "NOMAD", "PPMXL", "II/246" (=2MASS point sources) (or combinations: not supported (yet)! )
   catalogs: "II/246"
   
@@ -225,6 +238,10 @@ saturation:
   expand: True
   max_expansion_level: 3
   
+  check_centroid: True
+  max_centroid_offset: 5.0
+  max_centroid_ellipticity: 0.4
+  
   # For removing the saturation
   interpolation_method: "local_mean"
   sigma_clip: True
@@ -309,6 +326,9 @@ writing:
 {
   # Writing star table
   table_path: None
+  
+  # Catalog path
+  catalog_path: None
   
   # Writing star region
   region_path: None
