--- a/magic/config/trainedextractor.cfg
+++ b/magic/config/trainedextractor.cfg
@@ -11,6 +11,12 @@ logging:
   path: None
 } 
 
+# The path to the input directory
+input_path: None
+
+# The path to the output directory
+output_path: None
+
 # Options ...
 remove: True
 find_apertures: False
