--- a/magic/config/skysubtractor.cfg
+++ b/magic/config/skysubtractor.cfg
@@ -11,6 +11,12 @@ logging:
   path: None
 } 
 
+# The path to the input directory
+input_path: None
+
+# The path to the output directory
+output_path: None
+
 # Sigma clipping
 sigma_clip_mask: True
 sigma_clipping:
