Improvements in AstroMagic

--- a/magic/config/starextractor.cfg
+++ b/magic/config/starextractor.cfg
@@ -92,6 +92,8 @@ fetching:
   use_catalog_file: False
   catalog_path: None
 
+  cross_reference_with_galaxies: True
+
   # Other possible catalogs: "UCAC4", "NOMAD", "PPMXL", "II/246" (=2MASS point sources) (or combinations: not supported (yet)! )
   catalogs: "II/246"
   
