Fixed multiple bugs in AstroMagic

--- a/magic/config/starextractor.cfg
+++ b/magic/config/starextractor.cfg
@@ -39,28 +39,6 @@ find_saturation: True
 # Remove saturated stars
 remove_saturation: True
 
-# Find apertures (for saturation)
-find_apertures: False
-
-# Aperture removal
-remove_apertures: False
-aperture_removal:
-{
-  # Expansion factor
-  expansion_factor: 1.0
-  
-  # Background outer factor
-  background_outer_factor: 1.2
-  
-  # Sigma-clipping
-  no_sigma_clip_on_galaxy: True
-  sigma_clip: True
-  
-  # Interpolation
-  polynomial_on_galaxy: True
-  interpolation_method: "local_mean"
-}
-
 # Remove manual sources
 remove_manual: True
 
@@ -71,7 +49,8 @@ write_table: False
 write_catalog: False
 
 # Write region
-write_region: False
+write_star_region: False
+write_saturation_region: False
 
 # Write masked frame
 write_masked_frame: False
@@ -240,10 +219,6 @@ saturation:
   expand: True
   max_expansion_level: 3
   
-  check_centroid: True
-  max_centroid_offset: 5.0
-  max_centroid_ellipticity: 0.4
-  
   # For removing the saturation
   interpolation_method: "local_mean"
   sigma_clip: True
@@ -285,6 +260,40 @@ saturation:
   
   # Remove foreground stars
   remove_foreground: True
+  
+  check_centroid: True
+  max_centroid_offset: 5.0
+  max_centroid_ellipticity: 0.4
+  
+  # Apertures
+  apertures:
+  {
+    sigma_level: 4.0 # approximate isophotal extent
+    max_ellipticity: 0.1
+  
+    # Maximal offset between the aperture center and star position (in number of pixels) (None=no limit)
+    max_offset: 10.0
+  }
+  
+  # Aperture removal
+  remove_apertures: False
+  aperture_removal:
+  {
+    # Expansion factor
+    expansion_factor: 1.0
+  
+    # Background outer factor
+    background_outer_factor: 1.2
+  
+    # Sigma-clipping
+    no_sigma_clip_on_galaxy: True
+    sigma_clip: True
+  
+    # Interpolation
+    polynomial_on_galaxy: True
+    interpolation_method: "local_mean"
+  }
+  
 }
 
 # Region
@@ -305,16 +314,6 @@ fwhm:
   measure: "mean"    # other options: "max", "median"
 }
 
-# Apertures
-apertures:
-{
-  sigma_level: 4.0 # approximate isophotal extent
-  max_ellipticity: 0.1
-  
-  # Maximal offset between the aperture center and star position (in number of pixels) (None=no limit)
-  max_offset: 10.0
-}
-
 # Manually selected stars
 manual:
 {
@@ -333,8 +332,8 @@ writing:
   catalog_path: None
   
   # Writing star region
-  region_path: None
-  region_annotation: "flux"
+  star_region_path: None
+  saturation_region_path: None
   
   # Writing masked stars frame
   masked_frame_path: None
