AstroMagic: fixed bugs, allow stars to be marked manually (force removal, prevent removal, prevent saturation removal) by index

--- a/magic/config/starextractor.cfg
+++ b/magic/config/starextractor.cfg
@@ -64,6 +64,15 @@ write_result: False
 # Pixel to world (and vice versa) coordinate transformation method for AstroPy
 transformation_method: "wcs"  # "wcs" or "all"
 
+## NEW
+
+manual_indices:
+{
+  not_stars: None
+  remove_stars: None
+  not_saturation: None
+}
+
 # Fetching
 fetching:
 {
