--- a/magic/config/trainedextractor.cfg
+++ b/magic/config/trainedextractor.cfg
@@ -64,6 +64,11 @@ detection:
     # Remove the temporary directory
     remove_temp: False
   }
+  
+  apertures:
+  {
+      sigma_level: 4.0
+  }
 }
 
 # Source removal
