--- a/magic/config/galaxyextractor.cfg
+++ b/magic/config/galaxyextractor.cfg
@@ -50,6 +50,9 @@ remove_manual: True
 # Write catalog
 write_catalog: False
 
+# Write statistics
+write_statistics: False
+
 # Write region
 write_region: False
 
@@ -193,8 +196,11 @@ manual:
 # Writing
 writing:
 {
-  # Writing galaxy catalog
+  # Writing galactic catalog
   catalog_path: None
+  
+  # Writing galactic statistics
+  statistics_path: None
   
   # Writing galaxy region
   region_path: None
