--- a/magic/config/starextractor.cfg
+++ b/magic/config/starextractor.cfg
@@ -48,6 +48,9 @@ write_table: False
 # Write catalog
 write_catalog: False
 
+# Write statistics
+write_statistics: False
+
 # Write region
 write_star_region: False
 write_saturation_region: False
@@ -339,6 +342,9 @@ writing:
   
   # Catalog path
   catalog_path: None
+  
+  # Statistics path
+  statistics_path: None
   
   # Writing star region
   star_region_path: None
