Various additions II

--- a/magic/config/starextractor.cfg
+++ b/magic/config/starextractor.cfg
@@ -67,8 +67,7 @@ write_result: False
 # Pixel to world (and vice versa) coordinate transformation method for AstroPy
 transformation_method: "wcs"  # "wcs" or "all"
 
-## NEW
-
+# This ...
 manual_indices:
 {
   not_stars: None
@@ -82,6 +81,10 @@ fetching:
   # Use a catalog file
   use_catalog_file: False
   catalog_path: None
+  
+  # Use statistics file
+  use_statistics_file: False
+  statistics_path: None
 
   cross_reference_with_galaxies: True
 
