Lots of changes/improvements/bug fixes in DustPedia modeling image preparation and AstroMagic

--- a/magic/config/extractor.cfg
+++ b/magic/config/extractor.cfg
@@ -27,6 +27,11 @@ stars:
 {
 }
 
+# Options for other sources
+other_sources:
+{
+}
+
 # Write out the result
 write_result: True
 
@@ -38,6 +43,9 @@ write_regions: False
 
 # Write out masked frames from the galaxy and star extraction
 write_masked_frames: False
+
+# Build galactic/stellar catalogs
+build_catalog: False
 
 # Options for writing
 writing:
