--- a/magic/config/starextractor.cfg
+++ b/magic/config/starextractor.cfg
@@ -167,7 +167,7 @@ fitting:
   sigma_clip_background: True
 
   # sigma-clipping
-  sigma_clip_fwhms: False
+  sigma_clip_fwhms: True
   fwhm_sigma_level: 3.0
 
   # Upsample factor
