--- a/magic/config/trainedextractor.cfg
+++ b/magic/config/trainedextractor.cfg
@@ -21,7 +21,7 @@ output_path: None
 remove: True
 find_apertures: False
 remove_apertures: False
-classify: False
+classify: True
 
 # Writing options
 write_masked_frame: False
@@ -88,6 +88,34 @@ aperture_removal:
 
 classification:
 {
+    fitting:
+    {
+        use_center_or_peak: "peak"
+        model_names: ["Gaussian", "Airy"]
+        initial_sigma: None
+        minimum_pixels: 5
+        max_model_offset: 3.0
+        zoom_factor: 2.0
+        background_est_method: "polynomial"
+        sigma_clip_background: True
+
+        # sigma-clipping
+        sigma_clip_fwhms: False
+        fwhm_sigma_level: 3.0
+
+        # Upsample factor
+        upsample_factor: 1.0
+
+        # Debug
+        debug:
+        {
+          model_offset: False
+          success: False
+        }
+  
+        # Fit if undetected (no source (peak) found)
+        fit_if_undetected: False
+    }
 }
 
 # Writing
