Working on Modeling subpackage I

--- a/modeling/config/galaxymodeler.cfg
+++ b/modeling/config/galaxymodeler.cfg
@@ -11,6 +11,15 @@ logging:
   path: None
 } 
 
+# Input path
+input_path: None
+
+# Output path
+output_path: None
+
+# Write intermediate steps
+write_steps: False
+
 # The name of the primary and error frames
 primary: "primary"
 errors: "errors"
