--- a/modeling/config/mapmaker.cfg
+++ b/modeling/config/mapmaker.cfg
@@ -11,6 +11,12 @@ logging:
   path: None
 } 
 
+# Input path
+input_path: None
+
+# Output path
+output_path: None
+
 # Cut-off the low signal-to-noise pixels
 cutoff:
 {
