--- a/modeling/config/imagepreparation.cfg
+++ b/modeling/config/imagepreparation.cfg
@@ -11,6 +11,18 @@ logging:
   path: None
 } 
 
+# Input path
+input_path: None
+
+# Output path
+output_path: None
+
+# Write intermediate steps
+write_steps: False
+
+# Write result
+write_result: False
+
 # The name of the primary and error frames
 primary: "primary"
 errors: "errors"
@@ -53,4 +65,10 @@ crop: True
 cropping:
 {
   limits: [350, 725, 300, 825]
+}
+
+# Writing
+writing:
+{
+    result_path: None
 }
