Working on Modeling subpackage, II + AstroMagic bug fixes

--- a/magic/config/starextractor.cfg
+++ b/magic/config/starextractor.cfg
@@ -94,7 +94,7 @@ fetching:
   # The minimum distance the star has to be seperated from the galaxy center to be positively identified as a star
   min_distance_from_galaxy:
   {
-    principal: 15.0   # in pixels
+    principal: 20.0   # in pixels
     companion: 15.0   # in pixels
     other: 15.0       # in pixels
   } 
@@ -119,7 +119,7 @@ detection:
   minimum_pixels: 5
 
   # Threshold sigmas
-  sigma_level: 7.0
+  sigma_level: 3.0
 
   # Peak offset tolerance (in pixels)
   peak_offset_tolerance: 3.0
@@ -140,7 +140,7 @@ detection:
   always_subtract_background: False
   
   # Perform convolution, define the fwhm (in pixels) (for detection_method: "peaks")
-  convolution_fwhm: None
+  convolution_fwhm: 10.0
   
   # Debug
   debug:
@@ -193,7 +193,7 @@ removal:
   no_sigma_clip_on_galaxy: True
   polynomial_on_galaxy: True
   
-  sigma_level: 5.0
+  sigma_level: 3.0
   outer_factor: 1.6
   remove_saturation: True
   
@@ -215,10 +215,10 @@ saturation:
   # For segmentation:
   sigmas: 15.0
   background_outer_factor: 1.2
-  always_subtract_background: False
+  always_subtract_background: True
   background_est_method: "polynomial"
   sigma_clip_background: True
-  sigma_level: 2.0
+  sigma_level: 1.2
   expansion_factor: 1.5
   
   # Minimum connected pixels (int)
@@ -232,12 +232,12 @@ saturation:
   }
   
   expand: True
-  max_expansion_level: 3
+  max_expansion_level: 7
   
   # For removing the saturation
   interpolation_method: "local_mean"
   sigma_clip: True
-  no_sigma_clip_on_galaxy: True
+  no_sigma_clip_on_galaxy: False
   polynomial_on_galaxy: True
   
   # Debug mode
@@ -268,17 +268,17 @@ saturation:
   remove_if_not_fitted: True
   
   # Remove if undetected
-  remove_if_undetected: True
+  remove_if_undetected: False
   
   # Remove appendages from overlapping mask
-  remove_appendages: False
+  remove_appendages: True
   
   # Remove foreground stars
   remove_foreground: True
   
   check_centroid: True
-  max_centroid_offset: 5.0
-  max_centroid_ellipticity: 0.4
+  max_centroid_offset: 10.0
+  max_centroid_ellipticity: 0.3
   
   # Apertures
   apertures:
