--- a/modeling/config/galaxymodeler.cfg
+++ b/modeling/config/galaxymodeler.cfg
@@ -20,28 +20,19 @@ output_path: None
 # Write intermediate steps
 write_steps: False
 
-# The name of the primary and error frames
-primary: "primary"
-errors: "errors"
-
-# Define whether to save or plot intermediate results
-save: True
-plot: False
-
 # Define the names of the directories
 data_dir: "data"
 prep_dir: "prep"
 in_dir: "in"
-config_dir: "config"
-extra_dir: "extra"
-ignore_dir: "ignore"
-manual_dir: "manual"
 
 # The reference (for convolving, rebinning)
-reference_image: "PACS160"
+reference_image: "PACS 160"
 
 # Run the image preparation
 prepare: True
+
+# Do photometry
+do_photometry: True
 
 # Run the decomposition routines
 decompose: True
@@ -51,3 +42,22 @@ make_maps: True
 
 # Run the SED fitting
 fit_sed: True
+
+preparation:
+{
+    write_result: True
+}
+
+photometry:
+{
+}
+
+map_making:
+{
+}
+
+sed_fitting:
+{
+}
+
+
