--- a/modeling/config/imagepreparer.cfg
+++ b/modeling/config/imagepreparer.cfg
@@ -47,12 +47,16 @@ unit_conversion:
 convolve: True
 convolution:
 {
-  kernels_dir: "~/Kernels"
-  convolve_to: "PACS_160"  # the name as it appears in the Aniano kernel file name
+  kernel_path: None
 }
 
 # Rebinning
 rebin: True
+
+rebinning:
+{
+  reference_path: None
+}
 
 # Uncertainties
 uncertainties:
