Fixed various bugs

--- a/magic/config/extractor.cfg
+++ b/magic/config/extractor.cfg
@@ -47,6 +47,10 @@ write_masked_frames: False
 # Build galactic/stellar catalogs
 build_catalog: False
 
+# Special and ignore region
+special_region: None
+ignore_region: None
+
 # Options for writing
 writing:
 {
