--- a/magic/config/starextractor.cfg
+++ b/magic/config/starextractor.cfg
@@ -21,12 +21,6 @@ output_path: None
 track_record: False
 plot_track_record_if_exception: True
 
-# Special region
-special_region: None
-
-# Ignore region
-ignore_region: None
-
 # Manual star region
 manual_region: None
 
@@ -309,6 +303,9 @@ saturation:
     interpolation_method: "local_mean"
   }
   
+  
+  second_segmentation: False
+  second_sigma_level: 1.2
 }
 
 # Region
