Various changes; the problem that many FITS files have incorrect pixelscale information is fixed, n is fixed, among many other bugs, plus some new features and refactorings

--- a/magic/config/extractor.cfg
+++ b/magic/config/extractor.cfg
@@ -17,17 +17,22 @@ input_path: None
 # The path to the output directory
 output_path: None
 
-# Options for galaxy extraction
+# Options for catalogs (CatalogImporter)
+catalogs:
+{
+}
+
+# Options for galaxy extraction (GalaxyExtractor)
 galaxies:
 {
 }
 
-# Options for star extraction
+# Options for star extraction (StarExtractor)
 stars:
 {
 }
 
-# Options for other sources
+# Options for other sources (TrainedExtractor)
 other_sources:
 {
 }
@@ -44,8 +49,11 @@ write_regions: False
 # Write out masked frames from the galaxy and star extraction
 write_masked_frames: False
 
-# Build galactic/stellar catalogs
-build_catalog: False
+# Write galactic and stellar catalogs
+write_catalogs: False
+
+# Synchronize galactic/stellar catalogs
+synchronize_catalogs: False
 
 # Special and ignore region
 special_region: None
