--- a/magic/config/starextractor.cfg
+++ b/magic/config/starextractor.cfg
@@ -11,6 +11,9 @@ logging:
   path: None
 } 
 
+# If possible, avoid the fitting procedure and use the FWHM defined by the frame
+use_frame_fwhm: True
+
 # The path to the input directory
 input_path: None
 
@@ -82,9 +85,6 @@ fetching:
 
   cross_reference_with_galaxies: True
 
-  # Other possible catalogs: "UCAC4", "NOMAD", "PPMXL", "II/246" (=2MASS point sources) (or combinations: not supported (yet)! )
-  catalogs: "II/246"
-  
   # The minimum distance the star has to be seperated from the galaxy center to be positively identified as a star
   min_distance_from_galaxy:
   {
