Iplemented a few fixes for better star subtraction in UV images

--- a/magic/config/extractor.cfg
+++ b/magic/config/extractor.cfg
@@ -59,6 +59,9 @@ synchronize_catalogs: False
 special_region: None
 ignore_region: None
 
+# Interpolation method
+interpolation_method: "local_mean"
+
 # Options for writing
 writing:
 {
