More improvements in SkySubtractor

--- a/magic/config/skysubtractor.cfg
+++ b/magic/config/skysubtractor.cfg
@@ -25,8 +25,9 @@ sigma_clipping:
 }
 
 # Flags for writing
+write_result: True
 write_masked_frame: False
-write_clipped_masked_frame: False
+write_statistics: False
 write_histogram: False
 
 # Histogram:
@@ -38,26 +39,27 @@ histogram:
 # Writing
 writing:
 {
+  result_path: None
   masked_frame_path: None
-  clipped_masked_frame_path: None
+  statistics_path: None
   histogram_path: None
   
   # Value to use for masked pixels in the resulting FITS files
   mask_value: "nan"  # or e.g.: 0.0  (value is converted with float(mask_value) anyway)
 }
 
-# Extra region
-extra_region: None
-
 # Estimation
 estimate: True
 estimation:
 {
   method: "median"
+
+  # Downsample factor
+  downsample_factor: 2*4  # (times image.fwhm)
 }
 
 # Subtraction
 subtract: True
-
-# Downsample factor
-downsample_factor: 2*4  # (times image.fwhm)
+subtraction:
+{
+}
