Working on Modeling subpackage, III

--- a/modeling/config/imagepreparer.cfg
+++ b/modeling/config/imagepreparer.cfg
@@ -28,10 +28,18 @@ primary: "primary"
 errors: "errors"
 
 # Star extraction
-extract_stars: True
+extract_sources: True
 
-# Sky extraction
-extract_sky: True
+extraction:
+{
+}
+
+# Sky subtraction
+subtract_sky: True
+
+sky_subtraction:
+{
+}
 
 # Galactic extinction
 correct_for_extinction: True
