Improved the sky subtraction

--- a/magic/config/skysubtractor.cfg
+++ b/magic/config/skysubtractor.cfg
@@ -52,7 +52,8 @@ writing:
 estimate: True
 estimation:
 {
-  method: "median"
+  #method: "median"
+  method: "mean"
 
   # Downsample factor
   downsample_factor: 2*4  # (times image.fwhm)
