Re-organized the modeling subpackage

--- a/magic/config/extractor.cfg
+++ b/magic/config/extractor.cfg
@@ -38,10 +38,10 @@ other_sources:
 }
 
 # Write out the result
-write_result: True
+write_result: False
 
 # Write out the total mask
-write_mask: True
+write_mask: False
 
 # Write out region files from the galaxy and star extraction
 write_regions: False
