Accomodate the fact that sometimes the error map can have a different shape as the image frame

--- a/magic/config/galaxyextractor.cfg
+++ b/magic/config/galaxyextractor.cfg
@@ -86,6 +86,9 @@ detection:
   # Method for ...
   detection_method: "segmentation"
 
+  # Do not normally allow overlap between the center segment and the background mask of the source
+  allow_overlap: False
+
   # Expand
   expand: True
 
