--- a/magic/config/starextractor.cfg
+++ b/magic/config/starextractor.cfg
@@ -225,6 +225,9 @@ saturation:
   expand: True
   max_expansion_level: 7
   
+  # Do not normally allow overlap between the center segment and the background mask of the source
+  allow_overlap: False
+  
   # For removing the saturation
   interpolation_method: "local_mean"
   sigma_clip: True
