--- a/magic/config/skysubtractor.cfg
+++ b/magic/config/skysubtractor.cfg
@@ -53,7 +53,8 @@ estimate: True
 estimation:
 {
   #method: "median"
-  method: "mean"
+  #method: "mean"
+  method: "hybrid"
 
   # Downsample factor
   downsample_factor: 2*4  # (times image.fwhm)
