--- a/modeling/config/imagepreparer.cfg
+++ b/modeling/config/imagepreparer.cfg
@@ -29,15 +29,7 @@ errors: "errors"
 
 # Star extraction
 extract_sources: True
-
 extraction:
-{
-}
-
-# Sky subtraction
-subtract_sky: True
-
-sky_subtraction:
 {
 }
 
@@ -60,13 +52,19 @@ convolution:
 
 # Rebinning
 rebin: True
-
 rebinning:
 {
   reference_path: None
 }
 
+# Sky subtraction
+subtract_sky: True
+sky_subtraction:
+{
+}
+
 # Uncertainties
+set_uncertainties: True
 uncertainties:
 {
   calibration_error: None
