--- a/modeling/config/sedfetcher.cfg
+++ b/modeling/config/sedfetcher.cfg
@@ -5,4 +5,13 @@ input_path: None
 output_path: None
 
 # The names of the catalogs to query
-catalogs: ["galex", "2mass", "sdss", "sings"]
+catalogs: ["GALEX", "2MASS", "SINGS", "LVL", "Spitzer", "Spitzer/IRS", "IRAS", "IRAS-FSC"]
+
+# Write the SEDs
+write_seds: False
+
+# Writing options
+writing:
+{
+    seds_path: None
+}
