Removed old logging configuration settings that are not used anymore

--- a/core/config/batchlauncher.cfg
+++ b/core/config/batchlauncher.cfg
@@ -1,18 +1,2 @@
-# Logging
-logging:
-{
-  # Logging level
-  level: 'INFO'
-  
-  # Cascade the logging level down to the lower-level objects
-  cascade: True
-  
-  # Sets the path for an optional log file
-  path: None
-} 
-
 # The remote host to use
-remote: None
-
-# The name of the cluster to be used (if using a scheduling system)
-cluster: None
+remotes: None
