--- a/core/config/skirtremotelauncher.cfg
+++ b/core/config/skirtremotelauncher.cfg
@@ -4,6 +4,9 @@ remote: None
 # The name of the cluster to be used (if using a scheduling system)
 cluster: None
 
+# The walltime
+walltime: None
+
 # Keep remote input and output
 keep: False
 
