More work on the class that prepares the ski file and places the input for the fitting aspect of the radiative transfer modeling

--- a/modeling/config/inputinitializer.cfg
+++ b/modeling/config/inputinitializer.cfg
@@ -18,3 +18,9 @@ wavelengths:
   max_zoom: 30
   npoints_zoom: 302
 }
+
+# The number of photon packages per wavelength
+packages: 2e5
+
+# Whether dust self-absorption should be enabled
+selfabsorption: False
