--- a/core/config/batchlauncher.cfg
+++ b/core/config/batchlauncher.cfg
@@ -1,2 +1,46 @@
 # The remote host to use
 remotes: None
+
+# Keep remote input and output
+keep: False
+
+# Whether the different simulations share their input folder
+shared_input: False
+
+# The types of output that should be retrieved for the simulation (None means everything should be downloaded)
+retrieve_types: None
+
+# Extraction
+extraction:
+{
+  # The path of the directory where the extracted data should be placed
+  path: None
+  
+  progress: False
+  timeline: False
+  memory: False
+}
+
+# Plotting
+plotting:
+{
+  # The path of the directory where the plots should be placed
+  path: None
+  
+  seds: False
+  grids: False
+  
+  progress: False
+  timeline: False
+  memory: False
+}
+
+# Advanced
+advanced:
+{
+  # The path of the directory where the images/movies should be placed
+  path: None
+
+  rgb: False
+  wavemovie: False
+}
