--- a/modeling/config/parameterexplorer.cfg
+++ b/modeling/config/parameterexplorer.cfg
@@ -3,3 +3,30 @@ input_path: None
 
 # Output path
 output_path: None
+
+# Options for the young stellar population
+young_stars:
+{
+    nvalues: 10
+    rel_min: 0.75
+    rel_max: 2.0
+    scale: "linear"
+}
+
+# Options for the ionizing stellar population
+ionizing_stars:
+{
+    nvalues: 15
+    rel_min: 0.5
+    rel_max: 5.
+    scale: "linear"
+}
+
+# Options for the dust component
+dust:
+{
+    nvalues: 7
+    rel_min: 0.75
+    rel_max: 1.25
+    scale: "linear"
+}
