All-round small improvements

--- a/magic/config/extractor.cfg
+++ b/magic/config/extractor.cfg
@@ -36,8 +36,9 @@ write_regions: False
 # Write out masked frames from the galaxy and star extraction
 write_masked_frames: False
 
-# Write galactic and stellar catalogs
-write_catalogs: False
+# Write out galactic and stellar catalogs
+write_galactic_catalog: False
+write_stellar_catalog: False
 
 # Synchronize galactic/stellar catalogs
 synchronize_catalogs: False
