Improvements in the magic subpackage

--- a/magic/config/extractor.cfg
+++ b/magic/config/extractor.cfg
@@ -36,6 +36,9 @@ write_regions: False
 # Write out masked frames from the galaxy and star extraction
 write_masked_frames: False
 
+# Write out segmentation maps
+write_segments: False
+
 # Write out galactic and stellar catalogs
 write_galactic_catalog: False
 write_stellar_catalog: False
