--- a/magic/config/starextractor.cfg
+++ b/magic/config/starextractor.cfg
@@ -39,6 +39,10 @@ write_statistics: False
 write_star_region: False
 write_saturation_region: False
 
+# Write segmentation maps
+write_star_segments: False
+write_saturation_segments: False
+
 # Write masked frame
 write_masked_frame: False
 
@@ -186,10 +190,9 @@ removal:
 # Saturated stars
 saturation:
 {
-  method: "all" # other: "size", "brightest"
-  criterion: "flux"  # or "central_brightness"
-  brightest_method: "percentage"  # or: "sigma_clip"
-  limit: 0.08  # for "percentage": a percentage, for "sigma_clip": a sigma-level
+  only_brightest: False
+  brightest_method: "percentage"  # or: "sigma clipping"
+  brightest_level: 10.  # for "percentage": a percentage, for "sigma_clip": a sigma-level
   
   # For segmentation:
   sigmas: 15.0
@@ -336,7 +339,11 @@ writing:
   # Writing star region
   star_region_path: None
   saturation_region_path: None
-  
+
+  # Writing segmentation maps
+  star_segments_path: None
+  saturation_segments_path: None
+
   # Writing masked stars frame
   masked_frame_path: None
  
