Implemented the second source extraction step after the results are checked by eye

--- a/magic/config/galaxyextractor.cfg
+++ b/magic/config/galaxyextractor.cfg
@@ -37,6 +37,9 @@ write_statistics: False
 # Write region
 write_region: False
 
+# Write segmentation map
+write_segments: False
+
 # Write masked frame
 write_masked_frame: False
 
@@ -189,7 +192,10 @@ writing:
   # Writing galaxy region
   region_path: None
   region_annotation: "name"
-  
+
+  # Writing segmentation map
+  segments_path: None
+
   # Writing masked galaxies frame
   masked_frame_path: None
   
