--- a/magic/config/trainedextractor.cfg
+++ b/magic/config/trainedextractor.cfg
@@ -61,7 +61,7 @@ detection:
 # Source removal
 removal:
 {
-  # Interpolation method ("local_mean", "polynomial", "median", "mean")
+  # Interpolation method
   interpolation_method: "local_mean"
 }
 
