--- a/magic/config/extractor.cfg
+++ b/magic/config/extractor.cfg
@@ -51,7 +51,7 @@ special_region: None
 ignore_region: None
 
 # Interpolation method
-interpolation_method: "local_mean"
+interpolation_method: "biharmonic"
 
 # Options for writing
 writing:
