--- a/magic/config/starfinder.cfg
+++ b/magic/config/starfinder.cfg
@@ -126,22 +126,8 @@ fitting:
   fit_if_undetected: False
 }
 
-# Removal
-removal:
-{
-  method: ["interpolation", "interpolation", None]    # stars with model, stars without model but with source, stars with neither
-  interpolation_method: "local_mean"
-  sigma_clip: True
-  no_sigma_clip_on_galaxy: True
-  polynomial_on_galaxy: True
-  
-  sigma_level: 3.0
-  outer_factor: 1.6
-  remove_saturation: True
-  
-  # Remove foreground stars
-  remove_foreground: True
-}
+source_psf_sigma_level: 4.0
+source_outer_factor: 1.6
 
 # Saturated stars
 saturation:
