Made the find_other_sources step optional

--- a/magic/config/sourcefinder.cfg
+++ b/magic/config/sourcefinder.cfg
@@ -18,6 +18,9 @@ other_sources:
 {
 }
 
+# Find other sources
+find_other_sources: True
+
 # Synchronize galactic/stellar catalogs
 synchronize_catalogs: False
 
