Several improvements in modeling/ and magic/

--- a/modeling/config/datapreparer.cfg
+++ b/modeling/config/datapreparer.cfg
@@ -8,7 +8,7 @@ input_path: None
 output_path: None
 
 # Reference image
-reference_image: "PACS 160"
+reference_image: "Pacs red"
 
 importation:
 {
