--- a/magic/config/sourceextractor.cfg
+++ b/magic/config/sourceextractor.cfg
@@ -1,5 +1,8 @@
 # Interpolation method
 interpolation_method: "biharmonic"
 
+# Perform sigma-clipping when interpolating
+sigma_clip: True
+
 # Outer factor
-source_outer_factor: 1.4 
+source_outer_factor: 1.4
