--- a/magic/config/sourcefinder.cfg
+++ b/magic/config/sourcefinder.cfg
@@ -1,8 +1,3 @@
-# Options for catalogs (CatalogImporter)
-catalogs:
-{
-}
-
 # Options for galaxy finder
 galaxies:
 {
@@ -17,6 +12,9 @@ stars:
 other_sources:
 {
 }
+
+# Find stars
+find_stars: True
 
 # Find other sources
 find_other_sources: True
