--- a/modeling/config/imagepreparer.cfg
+++ b/modeling/config/imagepreparer.cfg
@@ -7,6 +7,9 @@ output_path: None
 # Write intermediate steps
 write_steps: False
 
+# Calculate calibration uncertainties
+calculate_calibration_uncertainties: True
+
 # Star extraction
 extract_sources: True
 extraction:
