Working on MapMaker class

--- a/modeling/config/sedfetcher.cfg
+++ b/modeling/config/sedfetcher.cfg
@@ -5,7 +5,7 @@ input_path: None
 output_path: None
 
 # The names of the catalogs to query
-catalogs: ["GALEX", "2MASS", "SINGS", "LVL", "Spitzer", "Spitzer/IRS", "IRAS", "IRAS-FSC", "S4G", "Emission lines"]
+catalogs: ["GALEX", "2MASS", "SINGS", "LVL", "Spitzer", "Spitzer/IRS", "IRAS", "IRAS-FSC", "S4G", "Emission lines", "Brown", "Planck"]
 
 # Write the SEDs
 write_seds: False
