Trying to fix the bulge subtraction

--- a/magic/config/sourcefinder.cfg
+++ b/magic/config/sourcefinder.cfg
@@ -19,6 +19,9 @@ find_stars: True
 # Find other sources
 find_other_sources: True
 
+# Build galactic/stellar catalogs
+build_catalogs: True
+
 # Synchronize galactic/stellar catalogs
 synchronize_catalogs: False
 
